@@ -24,12 +24,12 @@ $rest_amount = get_woowallet_cart_total() - $current_wallet_amount;
 if ( 'on' === woo_wallet()->settings_api->get_option( 'is_auto_deduct_for_partial_payment', '_wallet_settings_general' ) ) {
     ?>
     <tr class="wallet-pay-partial">
-        <th colspan="2"><label><?php echo sprintf( __( '%s will be debited from your wallet and %s will be paid through other payment method', 'woo-wallet' ), wc_price( $current_wallet_amount ), wc_price( $rest_amount ) ); ?></label></th>
+        <th colspan="2"><label><?php echo sprintf( __( '%s will be debited from your wallet and %s will be paid through other payment method', 'woo-wallet' ), wc_price( $current_wallet_amount, woo_wallet_wc_price_args() ), wc_price( $rest_amount, woo_wallet_wc_price_args() ) ); ?></label></th>
     </tr>
 
 <?php } else { ?>
     <tr class="wallet-pay-partial">
-        <th><?php _e( 'Pay by wallet', 'woo-wallet' ); ?> <span id="partial_wallet_payment_tooltip" style="vertical-align: middle;" title="<?php echo esc_html(sprintf( __( 'If checked %s will be debited from your wallet and %s will be paid through other payment method', 'woo-wallet' ), wc_price( $current_wallet_amount ), wc_price( $rest_amount ) ) ); ?>" class="dashicons dashicons-info"></span></th>
+        <th><?php _e( 'Pay by wallet', 'woo-wallet' ); ?> <span id="partial_wallet_payment_tooltip" style="vertical-align: middle;" title="<?php echo esc_html(sprintf( __( 'If checked %s will be debited from your wallet and %s will be paid through other payment method', 'woo-wallet' ), wc_price( $current_wallet_amount, woo_wallet_wc_price_args() ), wc_price( $rest_amount, woo_wallet_wc_price_args() ) ) ); ?>" class="dashicons dashicons-info"></span></th>
         <td data-title="<?php esc_attr_e( 'Pay by wallet', 'woo-wallet' ); ?>"><input type="checkbox" <?php checked( is_enable_wallet_partial_payment(), true, true ) ?> style="vertical-align: middle;" name="partial_pay_through_wallet" class="partial_pay_through_wallet" /></td>
     </tr>
 
